# Finance-N8N-project

./: NLP.ipynb  SEC_EDGAR.ipynb  YahooFinanceRSS_Scraper.ipynb  finviz.ipynb  pyproject.toml  requirements.txt  stock-analysis-bot.json  stock_research.py
Workflow 1/: stock-analysis-bot.json
Workflow 2/: My workflow.json  Stock Analysis.json  stock-analysis-bot-2.json
Workflow 3/: final-flow.json
