[project]
name = "n8n-stock-research"
version = "0.1.0"
description = "Stock research tools for N8N WhatsApp bot - NLP, Sentiment Analysis, Insider Trading"
requires-python = ">=3.10"

dependencies = [
    # Core HTTP & parsing
    "requests>=2.31.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    
    # NLP / ML
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

